removed unexpected "Save Resources" prompt when closing management console (fixes NX-1906)